# ferrum

./: .gitignore  Cargo.toml  README.md  TODO.md  config.example.toml  config.toml.example  ferrum-build-plan.md
.claude/: launch.json
.github/workflows/: deploy.yml
crates/ferrum-core/: Cargo.toml
crates/ferrum-core/src/: client.rs  config.rs  error.rs  indicators.rs  lib.rs  types.rs
crates/ferrum-daemon/: Cargo.toml
crates/ferrum-daemon/src/: db.rs  exit_monitor.rs  ipc.rs  iv_rank.rs  main.rs  order_poller.rs  orders.rs  pdt.rs  risk.rs  strategy.rs
crates/ferrum-export/: Cargo.toml
crates/ferrum-export/src/: main.rs
crates/ferrum-report/: Cargo.toml
crates/ferrum-report/src/: main.rs
crates/ferrum-tui/: Cargo.toml
crates/ferrum-tui/src/: app.rs  ipc.rs  logo.rs  main.rs  ui.rs
crates/ferrum-web/: Cargo.toml
crates/ferrum-web/src/: ipc.rs  main.rs  routes.rs
docs/: ferrum-forge-strategy.md  ferrum-iron-conduit-strategy.md  multi-strategy-plan.md  week-1-report-2026-04-11.md  week-2-report-2026-04-20.md
docs/changelog/: V1-V2-history.md  history.md
docs/reports/: 2026-04-24.md
scripts/: migrate-to-gitlab.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts  vite-env.d.ts
web/src/components/: Controls.tsx  FillsPanel.tsx  Header.tsx  LogStream.tsx  ParrotAnimation.tsx  PnlPanel.tsx  PositionsPanel.tsx  StrategiesPanel.tsx  TickerStrip.tsx
web/src/hooks/: useDashboard.ts
