[workspace]
members = [
    "crates/ferrum-core",
    "crates/ferrum-daemon",
    "crates/ferrum-web",
]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror          = "2"
chrono             = { version = "0.4", features = ["serde"] }
sqlx               = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "macros"] }
async-trait        = "0.1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
