[package]
name    = "ferrum-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
reqwest     = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
sqlx        = { workspace = true }
tracing     = { workspace = true }
