[package]
name    = "ferrum-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferrum-daemon"
path = "src/main.rs"

[dependencies]
ferrum-core        = { path = "../ferrum-core" }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
chrono             = { workspace = true }
sqlx               = { workspace = true }
async-trait        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest            = { workspace = true }
