[package]
name    = "ferrum-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferrum-tui"
path = "src/main.rs"

[dependencies]
ferrum-core        = { path = "../ferrum-core" }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
ratatui            = { workspace = true }
crossterm          = { workspace = true }
chrono             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
