[package]
name    = "ferrum-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferrum-web"
path = "src/main.rs"

[dependencies]
ferrum-core      = { path = "../ferrum-core" }
tokio            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
toml             = { workspace = true }
chrono           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
axum             = { version = "0.7", features = ["macros"] }
tower            = "0.4"
tower-http       = { version = "0.5", features = ["cors", "fs"] }
tokio-stream     = { version = "0.1", features = ["full"] }
futures-util     = "0.3"
